--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,34 +7,36 @@
     android:background="@color/background"
     tools:context=".MainActivity">
     <Spinner
-        android:id="@+id/location_spinner"
+        android:id="@+id/type_spinner"
         android:layout_width="fill_parent"
+        android:visibility="visible"
+        android:layout_below="@+id/location_spinner"
         android:layout_height="wrap_content"
         android:background="@color/tb"
      />
 
     <Spinner
-        android:layout_below="@+id/location_spinner"
-        android:id="@+id/type_spinner"
+        android:id="@+id/location_spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+
         android:background="@color/tb"
-        />
+        android:visibility="visible" />
 
     <GridView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/gridview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="59dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="43dp"
+        android:layout_marginBottom="50dp"
         android:columnWidth="100dp"
         android:horizontalSpacing="5dp"
-        android:verticalSpacing="5dp"
-        android:numColumns="auto_fit"/>
+        android:numColumns="auto_fit"
+        android:verticalSpacing="5dp" />
 
 
 </RelativeLayout>
